# Pierdolnik-II

./: .gitignore  CMakeLists.txt  Makefile  README.md  boot.asm  wpierdol.iso
kernel/: efi.asm
kernel/arch/i386/: boot.asm  boot2.asm  boot_common.inc  boot_helper.inc  kernel.asm
